# Scimon

./: .env.example  .gitattributes  .gitignore  404.html  Cargo.toml  LICENSE  README.md  index.html  mkdocs.yml  monset.yml  paimon.pbd  paimon.txt  paimon.yml  scibun.mon  scibun.pbd  scibun.yml  scimon.yml
.github/workflows/: rust.yml
basic-usage/: index.html
configs/env-file/: index.html
configs/scimon.yml-file/: index.html
docs/: basic-usage.md  build.md  env-file.md  external-resources.md  index.md  lorem-ipsum.txt  paimon-example.txt  providers.md  scrape.md
docs/configs/: env-file.md  scimon.yml-file.md
docs/monset/: commands-block.md  compress.md  covers.md  download-block.md  markdown-render.md  math.md  open-links.md  prints.md  qrcode.md  readme-block.md  style.md  what-is.md
env-file/: index.html
examples/: paimon-example.txt
external-resources/: index.html
monset/commands-block/: index.html
monset/compress/: index.html
monset/covers/: index.html
monset/download-block/: index.html
monset/markdown-render/: index.html
monset/math/: index.html
monset/open-links/: index.html
monset/prints/: index.html
monset/qrcode/: index.html
monset/readme-block/: index.html
monset/style/: index.html
monset/what-is/: index.html
providers/: index.html
scrape/: index.html
search/: search_index.json
src/: args_cli.rs  main.rs  paimon.rs  scibun.rs  scimon.rs
src/addons/: extract_covers.rs  kindle.rs  mod.rs  monlib.rs  ravenlib.rs  scibun.rs  scihub.rs  scimon.rs  scrape.rs  wikipedia.rs
src/api/: api_get_list.rs  api_publish_list.rs  mod.rs
src/cmd/: bootstrap.rs  checksum.rs  compress.rs  configs.rs  download.rs  download_markdown.rs  env.rs  kindle.rs  mod.rs  monset.rs  paimon.rs  read_list.rs  readme.rs  render.rs  scrape.rs  syntax.rs  tasks.rs  utils.rs  validation.rs
src/configs/: apis_uri.rs  configs_files.rs  env.rs  global.rs  mod.rs  pip.rs  providers.rs  regex.rs  settings.rs  write_env.rs
src/consts/: addons.rs  folders.rs  global.rs  mod.rs  prime_down.rs  regex.rs  render.rs  uris.rs
src/download/: mod.rs
src/ext/: extract_covers.rs  mod.rs
src/generator/: checksum.rs  covers.rs  file_name.rs  generate.rs  math.rs  mod.rs  qr_code.rs  uuid.rs
src/monlib/: api_get_list.rs  api_publish_list.rs
src/monset/: downloads_block.rs  macros.rs  mod.rs  readme_block.rs  runner_block.rs  vars.rs  vars_block.rs
src/prime_down/: mod.rs  pd_core.rs  pd_engine.rs  pd_extras.rs  pd_inject.rs  pd_io.rs  pd_minify.rs  pd_misc.rs  pd_render.rs
src/regex/: macros_regex.rs  minify_regex.rs  mod.rs  regex_core.rs
src/regexp/: mod.rs  regex_blocks.rs  regex_core.rs  regex_macros.rs  regex_minify.rs
src/render/: mod.rs  render.rs  render_env.rs  render_extra_qrcode.rs  render_extras.rs  render_inject.rs  render_inject_css.rs  render_inject_js.rs  render_io.rs  render_markdown.rs  render_minify.rs  render_name.rs  render_utils.rs
src/syntax/: downloads_block.rs  macros.rs  mod.rs  readme_block.rs  vars.rs  vars_block.rs
src/system/: general.rs  hashes.rs  markdown.rs  mod.rs  pdf.rs  pdf_creator.rs  plataforms.rs  providers.rs  reporting.rs  scripts.rs  syntax.rs  system.rs
src/ui/: checksum_alerts.rs  compress_alerts.rs  emojis.rs  errors_alerts.rs  errors_commands_alerts.rs  macros_alerts.rs  mod.rs  panic_alerts.rs  pip_alerts.rs  success_alerts.rs  (+2 more)
templates/: readme.html  render.html
{configs_path}/: paimon.html
(+64 files in other folders)
