[package]
name = "scimon"
version = "0.1.0"
edition = "2021"
authors = [ "scibun" ]
homepage = "https://scibun.com"
documentation = "https://docs.scibun.com"

crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.7", features = ["multipart", "json", "blocking"] }
tokio = { version = "1.39.3", features = ["full"] }
futures = "0.3"
url = "2.4.1"
is-url = "1.0.4"
mime = "0.3.13"
dotenvy = "0.15.7"
figlet-rs = "0.1.3"
colored = "2.0"
dirs-next = "2.0"
clap = { version = "4.5.16", features = ["cargo", "derive"] }
indicatif = "0.17.8"
regex = "1.10.6"
once_cell = "1"
chrono = "0.4"
serde_json = "1.0.125"
serde = { version = "1.0.208", features = ["derive"] }
webbrowser = "1.0.1"
pulldown-cmark = "0.12.0"
qrcode = "0.14.0"
base64 = "0.22.1"
serde_yaml = "0.9"
minify = "1.3.0"
image = "0.25.2"
select = "0.6.0"
headless_chrome = "1.0.13"
rand = "0.8.5"
open = "5.1.4"
lopdf = "0.33.0"
sha2 = "0.10.8"
zip = "2.2.0"
walkdir = "2.5.0"
scraper = "0.20.0"
pdfium-render = "0.8.24"
